# sillytask

./: README.md  pyproject.toml
sillytask/: __init__.py  __main__.py
sillytask/config/: __init__.py  config.py
sillytask/task/: __init__.py  task.py
sillytask/utils/: __init__.py  db.py  fileutils.py  textformat.py
