[project]
name = "sillytask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
]

[project.scripts]
sillytask = "sillytask.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pylint.typecheck]
signature-mutators = ["command", "option", "argument"]
